--- a/src/main/resources/templates/orderLines/list.html
+++ b/src/main/resources/templates/orderLines/list.html
@@ -90,6 +90,6 @@
     </tr>
     </tbody>
 </table>
-<a class="add-link" href="/orderlines/new">Add New Order Line</a>
+<a class="add-link" href="/orderLines/new">Add New Order Line</a>
 </body>
 </html>
