--- a/src/main/resources/templates/orders/create.html
+++ b/src/main/resources/templates/orders/create.html
@@ -102,6 +102,16 @@
         </select>
     </div>
     <div>
+
+
+        <label for="product">Product:</label>
+        <select id="product" th:field="*{product.id}">
+            <option th:each="product : ${products}" th:value="${product.id}" th:text="${product.name}"></option>
+        </select>
+
+
+
+
         <button type="submit">Save</button>
     </div>
 </form>
