--- a/src/main/resources/templates/users/create.html
+++ b/src/main/resources/templates/users/create.html
@@ -65,7 +65,8 @@
 </head>
 <body>
 <h1>Create User</h1>
-<form action="#" th:action="@{/users}" th:object="${user}" method="post">
+<form action="#" th:action="@{/users/signup}"  th:object="${user}" method="post">
+
     <div>
         <label for="name">Name:</label>
         <input type="text" id="name" th:field="*{name}" />
