--- a/src/main/resources/templates/shop/home.html
+++ b/src/main/resources/templates/shop/home.html
@@ -56,7 +56,7 @@
             font-weight: bold;
         }
 
-        input[type="text"], input[type="password"], input[type="email"] {
+        input[type="text"], input[type="password"], input[type="email"], select {
             width: 100%;
             padding: 10px;
             margin-bottom: 15px;
@@ -85,15 +85,15 @@
     </style>
 </head>
 <body>
+
 <div class="container">
-    <!-- Sign Up Form -->
     <div class="form-container">
         <h2>Sign Up</h2>
         <form th:action="@{/shop/signup}" th:object="${user}" method="post">
-            < <div>
-            <label for="name">Name:</label>
-            <input type="text" id="name" th:field="*{name}" />
-        </div>
+            <div>
+                <label for="name">Name:</label>
+                <input type="text" id="name" th:field="*{name}" />
+            </div>
             <div>
                 <label for="lastname">Lastname:</label>
                 <input type="text" id="lastname" th:field="*{lastname}" />
@@ -126,34 +126,31 @@
                 </select>
             </div>
             <div>
-                <button type="submit">Save</button>
+                <button type="submit">Sign Up</button>
             </div>
         </form>
-        <div th:if="${error}">
-            <p class="error" th:text="${error}">Error message will be shown here.</p>
-        </div>
+    </div>
+
+    <div class="signin-container">
+        <h2>Sign In</h2>
+        <form th:action="@{/shop/signin}" method="post">
+            <div>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email">
+            </div>
+            <div>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password">
+            </div>
+            <div>
+                <button type="submit">Sign In</button>
+            </div>
+            <div th:if="${error}" class="error">
+                Invalid email or password. Please try again.
+            </div>
+        </form>
     </div>
 </div>
 
-<!-- Sign In Form -->
-<div class="signin-container">
-    <h2>Sign In</h2>
-    <form th:action="@{/shop/signin}" th:object="${user}" method="post">
-        <div>
-            <label for="signin-email">Email:</label>
-            <input type="text" id="signin-email" th:field="*{email}" required>
-        </div>
-        <div>
-            <label for="signin-password">Password:</label>
-            <input type="password" id="signin-password" th:field="*{password}" required>
-        </div>
-        <div>
-            <button type="submit">Sign In</button>
-        </div>
-    </form>
-    <div th:if="${error}">
-        <p class="error">Invalid email or password. Please try again.</p>
-    </div>
-</div>
 </body>
 </html>
