--- a/src/main/resources/templates/shop/login.html
+++ b/src/main/resources/templates/shop/login.html
@@ -69,7 +69,7 @@
 <body>
 <div class="login-container">
     <h2>Login</h2>
-    <form th:action="@{/signin}" method="post">
+    <form th:action="@{/shop/signin}" method="post">
         <div>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
