--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -70,7 +70,6 @@
 <table>
     <thead>
     <tr>
-        <th>ID</th>
         <th>Name</th>
         <th>Description</th>
         <th>Author</th>
@@ -81,26 +80,17 @@
     </thead>
     <tbody>
     <tr th:each="product : ${products}">
-        <td th:text="${product.id}"></td>
         <td th:text="${product.name}"></td>
         <td th:text="${product.description}"></td>
         <td th:text="${product.author}"></td>
         <td th:text="${product.url}"></td>
         <td th:text="${product.category.name}"></td>
-
-
-        <form th:action="@{/orders}" method="post">
-            <input type="hidden" id="productId" name="productId" th:value="${product.id}" />
-            <input type="submit" value="Book Product">
-        </form>
-
         <td>
             <a th:href="@{/products/edit/{id}(id=${product.id})}">Edit</a>
             <a th:href="@{/products/delete/{id}(id=${product.id})}">Delete</a>
+            <a th:href="@{/orders/new/{productId}(productId=${product.id})}">Order</a>
         </td>
     </tr>
-
-
     </tbody>
 </table>
 <a href="/products/new" class="button">Add New Product</a>
