--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -86,8 +86,8 @@
         <td th:text="${product.url}"></td>
         <td th:text="${product.category.name}"></td>
         <td>
-            <a th:href="@{/products/edit/{id}(id=${product.id})}">Edit</a>
-            <a th:href="@{/products/delete/{id}(id=${product.id})}">Delete</a>
+<!--            <a th:href="@{/products/edit/{id}(id=${product.id})}">Edit</a>-->
+<!--            <a th:href="@{/products/delete/{id}(id=${product.id})}">Delete</a>-->
             <a th:href="@{/orders/new/{productId}(productId=${product.id})}">Order</a>
         </td>
     </tr>
