--- a/src/main/resources/templates/shop/home.html
+++ b/src/main/resources/templates/shop/home.html
@@ -86,50 +86,50 @@
 </head>
 <body>
 
-<!--<div class="container">-->
-<!--    <div class="form-container">-->
-<!--        <h2>Sign Up</h2>-->
-<!--        <form th:action="@{/shop/signUp}" th:object="${user}" method="post">-->
-<!--            <div>-->
-<!--                <label for="name">Name:</label>-->
-<!--                <input type="text" id="name" th:field="*{name}" />-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <label for="lastname">Lastname:</label>-->
-<!--                <input type="text" id="lastname" th:field="*{lastname}" />-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <label for="email">Email:</label>-->
-<!--                <input type="email" id="email" th:field="*{email}" />-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <label for="password">Password:</label>-->
-<!--                <input type="password" id="password" th:field="*{password}" />-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <label for="city">City:</label>-->
-<!--                <input type="text" id="city" th:field="*{city}" />-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <label for="avatar">Avatar:</label>-->
-<!--                <input type="text" id="avatar" th:field="*{avatar}" />-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <label for="address">Address:</label>-->
-<!--                <input type="text" id="address" th:field="*{address}" />-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <label for="role">Role:</label>-->
-<!--                <select id="role" th:field="*{role}">-->
-<!--                    <option value="USER">USER</option>-->
-<!--                    <option value="ADMIN">ADMIN</option>-->
-<!--                </select>-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <button type="submit">Sign Up</button>-->
-<!--            </div>-->
-<!--        </form>-->
-<!--    </div>-->
+<div class="container">
+    <div class="form-container">
+        <h2>Sign Up</h2>
+        <form th:action="@{/shop/signUp}" th:object="${user}" method="post">
+            <div>
+                <label for="name">Name:</label>
+                <input type="text" id="name" th:field="*{name}" />
+            </div>
+            <div>
+                <label for="lastname">Lastname:</label>
+                <input type="text" id="lastname" th:field="*{lastname}" />
+            </div>
+            <div>
+                <label for="email">Email:</label>
+                <input type="email" id="email" th:field="*{email}" />
+            </div>
+            <div>
+                <label for="password">Password:</label>
+                <input type="password" id="password" th:field="*{password}" />
+            </div>
+            <div>
+                <label for="city">City:</label>
+                <input type="text" id="city" th:field="*{city}" />
+            </div>
+            <div>
+                <label for="avatar">Avatar:</label>
+                <input type="text" id="avatar" th:field="*{avatar}" />
+            </div>
+            <div>
+                <label for="address">Address:</label>
+                <input type="text" id="address" th:field="*{address}" />
+            </div>
+            <div>
+                <label for="role">Role:</label>
+                <select id="role" th:field="*{role}">
+                    <option value="USER">USER</option>
+                    <option value="ADMIN">ADMIN</option>
+                </select>
+            </div>
+            <div>
+                <button type="submit">Sign Up</button>
+            </div>
+        </form>
+    </div>
 
     <div class="signin-container">
         <h2>Sign In</h2>
