--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -88,25 +88,29 @@
         <th>Actions</th>
     </tr>
     </thead>
-    <tbody>
-    <tr th:each="user : ${users}">
-        <td th:text="${user.id}"></td>
-        <td th:text="${user.name}"></td>
-        <td th:text="${user.lastname}"></td>
-        <td th:text="${user.email}"></td>
-        <td th:text="${user.city}"></td>
-        <td><img th:src="@{${user.avatar}}" alt="Avatar" /></td>
-        <td th:text="${user.address}"></td>
-        <td th:text="${user.role}"></td>
-        <td>
-            <a th:href="@{/users/edit/{id}(id=${user.id})}">Edit</a>
-            <form th:action="@{/users/delete/{id}(id=${user.id})}" method="post" style="display: inline;">
-                <input type="hidden" name="_method" value="delete"/>
-                <button type="submit" style="background: none; border: none; color: #007bff; cursor: pointer; text-decoration: underline; padding: 0; font: inherit;">Delete</button>
-            </form>
-        </td>
-    </tr>
-    </tbody>
+    <body>
+    <h1>User List</h1>
+
+    <ul>
+        <tr th:each="user : ${users}">
+            <td th:text="${user.id}">ID</td>
+            <td th:text="${user.name}">Name</td>
+            <td th:text="${user.lastname}">Lastname</td>
+            <td th:text="${user.email}">Email</td>
+            <td th:text="${user.city}">City</td>
+            <td th:text="${user.avatarUrl}">Avatar"</td>
+            <td th:text="${user.address}">Address</td>
+            <td th:text="${user.role}">Role</td>
+            <td>
+                <a th:href="@{/users/edit/{id}(id=${user.id})}">Edit</a>
+                <form th:action="@{/users/delete/{id}(id=${user.id})}" method="post" style="display:inline;">
+                    <input type="hidden" name="_method" value="delete">
+                    <button type="submit">Delete</button>
+                </form>
+            </td>
+        </tr>
+    </ul>
+    </body>
 </table>
 <a href="/users/new" class="button">Add New User</a>
 </body>
