--- a/src/main/resources/templates/products/create.html
+++ b/src/main/resources/templates/products/create.html
@@ -43,7 +43,7 @@
 
 
 
-<form  action="#" th:action="@{/products}"  method="post">
+<form  action="#" th:action="@{/products}" th:object="${product}" method="post">
 
 
     <label for="name">Name:</label>
