--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -88,7 +88,7 @@
         <td>
 <!--            <a th:href="@{/products/edit/{id}(id=${product.id})}">Edit</a>-->
 <!--            <a th:href="@{/products/delete/{id}(id=${product.id})}">Delete</a>-->
-            <a th:href="@{/orders/new/{productId}(productId=${product.id})}">Order</a>
+            <a th:href="@{/orders/new/{productId}(productId=${product.id})}">Order</a
         </td>
     </tr>
     </tbody>
