--- a/src/main/resources/templates/orders/create.html
+++ b/src/main/resources/templates/orders/create.html
@@ -56,10 +56,34 @@
 </head>
 <body>
 <h1>Create Order</h1>
+
 <form th:action="@{/orders/}" th:object="${order}" method="post">
     <input type="hidden" th:field="*{product.id}" />
-    <label for="quantity">Quantity</label>
-    <input type="number" id="quantity" th:field="*{quantity}" />
+    <label for="userName">User Name</label>
+    <input type="text" id="userName" th:field="*{userName}" />
+
+    <label for="totalCost">Total Cost</label>
+    <input type="number" id="totalCost" th:field="*{totalCost}" />
+
+    <label for="deliveryaddress">Delivery Address</label>
+    <input type="text" id="deliveryaddress" th:field="*{deliveryaddress}" />
+
+    <label for="userAddress">User Address</label>
+    <input type="text" id="userAddress" th:field="*{userAddress}" />
+
+    <label for="dateOfSubmission">Date of Submission</label>
+    <input type="date" id="dateOfSubmission" th:field="*{dateOfSubmission}" />
+
+    <label for="status">Status</label>
+    <select id="status" th:field="*{status}">
+        <option value="ACTIVE">ACTIVE</option>
+        <option value="PENDING">PENDING</option>
+        <option value="SENT">SENT</option>
+    </select>
+
+<!--    <label for="quantity">Quantity</label>-->
+<!--    <input type="number" id="quantity" th:field="*{quantity}" />-->
+
     <button type="submit">Order</button>
 </form>
 </body>
